using UnityEngine;

namespace FortBlast.Player
{
    public static class PlayerData
    {
        // Animator Params
        public const string PlayerHorizontal = "Move H";
        public const string PlayerVertical = "Move V";
        public const string PlayerDead = "Dead";
        public const string PlayerShooting = "Shooting";


        // Movement Params
        public const string HorizontalAxis = "Horizontal";
        public const string VerticalAxis = "Vertical";
    }
}