using UnityEngine;

namespace FortBlast.Player.Data
{
    public static class PlayerData
    {
        // Animator Params
        public const string PlayerHorizontal = "Move H";
        public const string PlayerVertical = "Move V";
        public const string PlayerDead = "Dead";
        public const string PlayerShooting = "Shooting";
        public const string PlayerSpawning = "Spawning";


        // Movement Params
        public const string HorizontalAxis = "Horizontal";
        public const string VerticalAxis = "Vertical";
        public const string MouseX = "Mouse X";
    }
}